Fixed layout bug

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-#subject, #confirmation {
+.white {
     font-family: sans-serif !important;
     background: #ffffff !important;
 }
